fix: cập nhật giao diện các màn hình authentication

--- a/app/src/main/res/drawable/ic_calendar.xml
+++ b/app/src/main/res/drawable/ic_calendar.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="m446,40h-46v-24c0,-8.84 -7.16,-16 -16,-16s-16,7.16 -16,16v24h-224v-24c0,-8.84 -7.16,-16 -16,-16s-16,7.16 -16,16v24h-46c-36.39,0 -66,29.61 -66,66v340c0,36.39 29.61,66 66,66h380c36.39,0 66,-29.61 66,-66v-340c0,-36.39 -29.61,-66 -66,-66zM66,72h46v16c0,8.84 7.16,16 16,16s16,-7.16 16,-16v-16h224v16c0,8.84 7.16,16 16,16s16,-7.16 16,-16v-16h46c18.75,0 34,15.25 34,34v38h-448v-38c0,-18.75 15.25,-34 34,-34zM446,480h-380c-18.75,0 -34,-15.25 -34,-34v-270h448v270c0,18.75 -15.25,34 -34,34z" />
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="m18,4.25h-1.25v-1.25c0,-0.414 -0.336,-0.75 -0.75,-0.75s-0.75,0.336 -0.75,0.75v1.25h-6.5v-1.25c0,-0.414 -0.336,-0.75 -0.75,-0.75s-0.75,0.336 -0.75,0.75v1.25h-1.25c-2.068,0 -3.75,1.682 -3.75,3.75v10c0,2.068 1.682,3.75 3.75,3.75h12c2.068,0 3.75,-1.682 3.75,-3.75v-10c0,-2.068 -1.682,-3.75 -3.75,-3.75zM20.25,18c0,1.241 -1.009,2.25 -2.25,2.25h-12c-1.241,0 -2.25,-1.009 -2.25,-2.25v-6.25h16.5zM20.25,10.25h-16.5v-2.25c0,-1.241 1.009,-2.25 2.25,-2.25h1.25v1.25c0,0.414 0.336,0.75 0.75,0.75s0.75,-0.336 0.75,-0.75v-1.25h6.5v1.25c0,0.414 0.336,0.75 0.75,0.75s0.75,-0.336 0.75,-0.75v-1.25h1.25c1.241,0 2.25,1.009 2.25,2.25zM5,14.5v-1c0,-0.276 0.224,-0.5 0.5,-0.5h1c0.276,0 0.5,0.224 0.5,0.5v1c0,0.276 -0.224,0.5 -0.5,0.5h-1c-0.276,0 -0.5,-0.224 -0.5,-0.5z"/>
 </vector>
